--- a/.dockerignore
+++ b/.dockerignore
@@ -1,19 +1,85 @@
+# ===========================
+# 通用设置 (Git, OS, IDE, Docker)
+# ===========================
 # Git
-.git
+.git/
 .gitignore
 
 # Docker
 Dockerfile
 .dockerignore
+docker-compose.yml
 
+# IDE & Editor
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS Files
+.DS_Store
+Thumbs.db
+
+# Security (Credentials and secrets)
+credentials.json
+.env
+*.pem
+*.key
+
+# Documentation
+README.md
+docs/
+
+# General Logs
+*.log
+logs/
+
+
+# ===========================
+# Python 相关
+# ===========================
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual environments
+venv/
+env/
+ENV/
+
+
+# ===========================
+# Node.js / JavaScript 相关
+# ===========================
 # Dependencies
-node_modules
+node_modules/
 
-# Logs
+# NPM / Yarn Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+
+# ===========================
+# 项目特定文件 (自定义)
+# ===========================
 # Old files (no longer needed in the container)
 input.js
 output.js
